--- a/docs/rapport/graph_database.tex
+++ b/docs/rapport/graph_database.tex
@@ -106,5 +106,7 @@ emphstyle=\color{type}}
 \input{conception}
 \chapter{Implémentation}
 \input{implementation}
+\chapter{Conclusion}
+\input{conclusion}
 
 \end{document}
