--- a/docs/rapport/conception.tex
+++ b/docs/rapport/conception.tex
@@ -25,10 +25,10 @@ Les contraintes de type \emph{NULL}, \emph{NOT NULL} et \emph{DEFAULT} sont igno
 
 	\subsection{Tables}
 		Une table est identifiée par son nom et le schéma auquel elle appartient. Elle possède un ensemble de colonnes et un ensemble de contraintes.
-	\subsection{Colonne}
+	\subsection{Colonnes}
 		Une colonne est identifiée par son nom et la table à laquelle elle appartient. Elle possède un type, et éventuellement une précision. 
 	\subsection{Contraintes}
-		Une contrainte est identifié par un nom, sur certain SGBD il faut lui adjoindre le nom de la table sur laquelle elle est appliquée pour avoir une identification unique (notamment MySQL). Une contrainte possède un type et s'applique sur une ou plusieurs colonne d'une table. Elle peut être de type clé primaire, clé étrangère, contrainte d'unicité ou \emph{check}. Les contraintes d'intégrité référentielle référence une contrainte de type unique compatible, c'est à dire que les colonnes sur lesquelles s'applique la clé étrangère et les colonnes sur lesquelles s'applique la contrainte référencée sont au même nombres et de même types.
+		Une contrainte est identifiée par un nom, sur certains SGBDR il faut lui adjoindre le nom de la table sur laquelle elle est appliquée pour avoir une identification unique (notamment MySQL). Une contrainte possède un type et s'applique sur une ou plusieurs colonnes d'une table. Elle peut être de type clé primaire, clé étrangère, contrainte d'unicité ou contrainte de vérification. Les contraintes d'intégrité référentielle référencent une contrainte de type unique compatible, c'est à dire que les colonnes sur lesquelles s'applique la clé étrangère et les colonnes sur lesquelles s'applique la contrainte référencée sont au même nombre et de mêmes types.
 		
 \section{ORM}
 
@@ -54,10 +54,10 @@ En revanche, cette méthode d'abstraction présente l'inconvénient de générer
 	
 	Nous souhaitons avoir une représentation la plus proche possible d'une représentation connue de schéma de base de données afin que celle-ci soit rapidement compréhensible par des personnes averties. Pour ce faire nous avons à notre dispositions plusieurs librairie permettant l'organisation et la visualisation de graphe.
 
-  \subsection{différentes librairies}
+  \subsection{Différentes librairies}
   	\subsubsection{graphviz} \textit{Graph Visualization Software}
   	
-			GraphViz est un logiciel de visualisation de graphes écrit en C. C'est un logiciel libre sous EPL\footnote{EPL, Eclipse Public Licence.} développé par AT\&T et les laboratoirs Bell. Il offre différents algorithmes de spatialisation. Il est à l'origine du langage de description de graphe DOT. C'est un des logiciel les plus utilisé pour l'affichage de graphes, il permet notamment de l'affichage de nœuds représenté sous une forme complexe. De plus, il offre une interface en ligne de commande\footnote{voir \texttt{man graphviz}} aisément utilisable par un programme tierce.
+			GraphViz est un logiciel de visualisation de graphes écrit en C. C'est un logiciel libre sous EPL\footnote{EPL, Eclipse Public Licence.} développé par AT\&T et les laboratoires Bell. Il offre différents algorithmes de spatialisation. Il est à l'origine du langage de description de graphe DOT. C'est un des logiciel les plus utilisé pour l'affichage de graphes, il permet notamment de l'affichage de nœuds représenté sous une forme complexe. De plus, il offre une interface en ligne de commande\footnote{voir \texttt{man graphviz}} aisément utilisable par un programme tierce.
 		\subsubsection{JUNG} \textit{Java Universal Network/Graph Framework}
 		
 				JUNG est une API java permettant la modélisation, l'analyse et la visualisation de graphes. C'est un logiciel libre sous licence BSD\footnote{voir http://jung.sourceforge.net/license.txt} et est développé par l'université de Californie. Cette API semble bien fournie et documentée, mais ne semble pas être en mesure d'afficher des nœuds aux formes complexes. 
@@ -70,7 +70,7 @@ En revanche, cette méthode d'abstraction présente l'inconvénient de générer
 		Notre choix s'est porté sur GraphViz, et plus particulièrement sur la commande \texttt{dot} qui offre un algorithme de spatialisation hiérarchique. GraphViz présente les principaux avantages d'être extrêmement simple d'utilisation grâce à son interface en ligne de commande et d'offrir la possibilité de généré des nœuds de forme complexe ce qui nous permettra de nous rapprocher d'une représentation d'une entité du formalisme E/A\footnote{Entité/Association}.
 
 \section{L'IHM}	
-	\subsection{les choix possibles}
+	\subsection{Les choix possibles}
 	\label{ihm_choix_possibles}
 		Notre Interface Homme-Machine peut être conçue de deux manières. La première solution consiste en la création d'une interface graphique proposant une fenêtre de configuration puis un affichage du résultat obtenu. La seconde est orienté ligne de commande générant une image représentant le résultat. 	
 	
