subsection au lieu de subsubsection

--- a/docs/rapport/cahier_des_charges.tex
+++ b/docs/rapport/cahier_des_charges.tex
@@ -2,7 +2,7 @@
 
 
 \section{Fonctions principales}
-		\subsubsection{Données d'un schéma de base de données}
+		\subsection{Données d'un schéma de base de données}
 		La fonction principale de l'application est de fournir les données d'un schéma d'une base de données. Un schéma est composé de tables, de colonne et de contraintes. Les informations qui doivent être fournies sont décrites ci-après.
 		
 			\paragraph{tables}
@@ -34,7 +34,7 @@
 				\item Contraintes de vérification de la validité des données (CHECK)
 				\end{itemize}
 				
-		\subsubsection{Visualisation graphique}
+		\subsection{Visualisation graphique}
 		Dans le but d'assurer une représentation aisément compréhensible, l'application doit permettre la visualisation du schéma de manière graphique.
 
 \section{Fonctions contraintes}
