--- a/docs/rapport/intro.tex
+++ b/docs/rapport/intro.tex
@@ -5,7 +5,7 @@ Le travail présenté dans ce rapport consiste en la réalisation d'un utilitair
 
 \clearemptydoublepage
 \chapter*{Méthode de travail}
-Ce travail a été réalisé par une équipe de trois étudiants en Master Informatique DECOL\footnote{Master DECOL : Données, Connaissances et Langage Naturel.} : Thibaut Marmin, Namrata Patel et Clément Sipieter. Dans un premier temps, les travaux sur la phase d'analyse ont été effectués par l'ensemble des membres l'équipe. Lors de l'implémentation, nous avons commencé par définir ensemble l'architecture de l'application, puis nous avons réparti le tâches de la manière suivante : 
+Ce travail a été réalisé par une équipe de trois étudiants en Master Informatique DECOL\footnote{Master DECOL : Données, Connaissances et Langage Naturel.} : Thibaut Marmin, Namrata Patel et Clément Sipieter. Dans un premier temps, les travaux sur la phase d'analyse ont été effectués par l'ensemble des membres l'équipe. Lors de l'implémentation, nous avons commencé par définir ensemble l'architecture de l'application, puis nous avons réparti les tâches de la manière suivante : 
 
 \begin{description}
 \item[CLI\footnote{Commande Line Interface (\og Interface en Ligne de Commande \fg{} en Français).}] : Clément
