commit for merge

--- a/docs/rapport/conception.tex
+++ b/docs/rapport/conception.tex
@@ -57,17 +57,17 @@ En revanche, cette méthode d'abstraction présente l'inconvénient de générer
   \subsection{Différentes librairies}
   	\subsubsection{graphviz} \textit{Graph Visualization Software}
   	
-			GraphViz est un logiciel de visualisation de graphes écrit en C. C'est un logiciel libre sous EPL\footnote{EPL, Eclipse Public Licence.} développé par AT\&T et les laboratoires Bell. Il offre différents algorithmes de spatialisation. Il est à l'origine du langage de description de graphe DOT. C'est un des logiciel les plus utilisé pour l'affichage de graphes, il permet notamment de l'affichage de nœuds représenté sous une forme complexe. De plus, il offre une interface en ligne de commande\footnote{voir \texttt{man graphviz}} aisément utilisable par un programme tierce.
+			GraphViz est un logiciel de visualisation de graphes écrit en C. C'est un logiciel libre sous EPL\footnote{EPL, Eclipse Public Licence.} développé par AT\&T et les laboratoires Bell. Il offre différents algorithmes de spatialisation. Il est à l'origine du langage de description de graphe DOT. C'est un des logiciel les plus utilisé pour l'affichage de graphes, il permet notamment l'affichage de nœuds représenté sous une forme complexe. De plus, il offre une interface en ligne de commande\footnote{voir \texttt{man graphviz}} aisément utilisable par un programme tiers.
 		\subsubsection{JUNG} \textit{Java Universal Network/Graph Framework}
 		
-				JUNG est une API java permettant la modélisation, l'analyse et la visualisation de graphes. C'est un logiciel libre sous licence BSD\footnote{voir http://jung.sourceforge.net/license.txt} et est développé par l'université de Californie. Cette API semble bien fournie et documentée, mais ne semble pas être en mesure d'afficher des nœuds aux formes complexes. 
+				JUNG est une API java permettant la modélisation, l'analyse et la visualisation de graphes. C'est un logiciel libre sous licence BSD\footnote{voir http://jung.sourceforge.net/license.txt} qui est développé par l'université de Californie. Cette API semble bien fournie et documentée, mais ne semble pas être en mesure d'afficher des nœuds aux formes complexes. 
 		\subsubsection{Grappa} \textit{A Java \texttt{gra}ph \texttt{pa}ckage}
 		
 			Grappa est une API java de visualisation et manipulation de graphes. C'est un logiciel libre sous CPL\footnote{CPL, Common Public Licence.} développé par John Mocenigo d'AT\&T. Cette API se base sur le langage de description de graphe DOT et est partiellement compatible pour l'affichage des nœuds de formes complexes.
 		
 				
   \subsection{Notre choix}
-		Notre choix s'est porté sur GraphViz, et plus particulièrement sur la commande \texttt{dot} qui offre un algorithme de spatialisation hiérarchique. GraphViz présente les principaux avantages d'être extrêmement simple d'utilisation grâce à son interface en ligne de commande et d'offrir la possibilité de généré des nœuds de forme complexe ce qui nous permettra de nous rapprocher d'une représentation d'une entité du formalisme E/A\footnote{Entité/Association}.
+		Notre choix s'est porté sur GraphViz, et plus particulièrement sur la commande \texttt{dot} qui offre un algorithme de spatialisation hiérarchique. GraphViz présente les principaux avantages d'être extrêmement simple d'utilisation grâce à son interface en ligne de commande et d'offrir la possibilité de générer des nœuds de forme complexe ce qui nous permettra de nous rapprocher d'une représentation d'une entité du formalisme E/A\footnote{Entité/Association}.
 
 \section{L'IHM}	
 	\subsection{Les choix possibles}
